--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="AWSSDK.Core" version="3.7.100.14" targetFramework="net471" />
   <package id="AWSSDK.SecurityToken" version="3.7.100.14" targetFramework="net471" />
   <package id="DnsClient" version="1.6.1" targetFramework="net471" />
+  <package id="LitJson" version="0.18.0" targetFramework="net471" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net471" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net471" />
@@ -12,6 +13,7 @@
   <package id="MongoDB.Libmongocrypt" version="1.8.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net471" />
   <package id="SharpCompress" version="0.30.1" targetFramework="net471" />
+  <package id="SimpleJson" version="0.38.0" targetFramework="net471" />
   <package id="Snappier" version="1.0.0" targetFramework="net471" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net471" />
   <package id="System.Memory" version="4.5.4" targetFramework="net471" />
